--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,5 +1,61 @@
+@inproceedings{Ignjatovic2011,
+author = {Ignjatovic, Aleksandar},
+booktitle = {UNSW Applied Mathematics Seminar},
+file = {:Users/tiao/Documents/Mendeley Desktop/Ignjatovic/2011/Ignjatovic\_2011\_Chromatic Derivatives and Expansions.pdf:pdf},
+number = {March},
+title = {{Chromatic Derivatives and Expansions}},
+year = {2011}
+}
+@inproceedings{Liu2011,
+author = {Liu, Chun-Lin},
+file = {:Users/tiao/Documents/Mendeley Desktop/Liu/2011/Liu\_2011\_Chromatic Derivatives A New Perspective of Signal Representation.pdf:pdf},
+title = {{Chromatic Derivatives: "A New Perspective of Signal Representation"}},
+year = {2011}
+}
+@inproceedings{Bertalmio2001,
+author = {Bertalmio, M and Bertozzi, A.L. and Sapiro, G},
+booktitle = {Proceedings of the 2001 IEEE Computer Society Conference on Computer Vision and Pattern Recognition. CVPR 2001},
+doi = {10.1109/CVPR.2001.990497},
+file = {:Users/tiao/Documents/Mendeley Desktop/Bertalmio, Bertozzi, Sapiro/2001/Bertalmio, Bertozzi, Sapiro\_2001\_Navier-stokes, fluid dynamics, and image and video inpainting.pdf:pdf},
+isbn = {0-7695-1272-0},
+pages = {I--355--I--362},
+publisher = {IEEE Comput. Soc},
+title = {{Navier-stokes, fluid dynamics, and image and video inpainting}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=990497},
+volume = {1},
+year = {2001}
+}
+@inproceedings{Bertalmio2000,
+address = {New York, New York, USA},
+author = {Bertalmio, Marcelo and Sapiro, Guillermo and Caselles, Vincent and Ballester, Coloma},
+booktitle = {Proceedings of the 27th annual conference on Computer graphics and interactive techniques - SIGGRAPH '00},
+doi = {10.1145/344779.344972},
+file = {:Users/tiao/Documents/Mendeley Desktop/Bertalmio et al/2000/Bertalmio et al.\_2000\_Image inpainting.pdf:pdf},
+isbn = {1581132085},
+keywords = {anisotropic,image restoration,inpainting,isophotes},
+pages = {417--424},
+publisher = {ACM Press},
+title = {{Image inpainting}},
+url = {http://portal.acm.org/citation.cfm?doid=344779.344972},
+year = {2000}
+}
+@article{Criminisi2004,
+author = {Criminisi, A and Perez, P. and Toyama, K},
+doi = {10.1109/TIP.2004.833105},
+file = {:Users/tiao/Documents/Mendeley Desktop/Criminisi, Perez, Toyama/2004/Criminisi, Perez, Toyama\_2004\_Region Filling and Object Removal by Exemplar-Based Image Inpainting.pdf:pdf},
+issn = {1057-7149},
+journal = {IEEE Transactions on Image Processing},
+keywords = {image inpainting,multaneous texture and structure,object removal,propagation,si-,texture synthesis},
+month = sep,
+number = {9},
+pages = {1200--1212},
+title = {{Region Filling and Object Removal by Exemplar-Based Image Inpainting}},
+url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=1323101},
+volume = {13},
+year = {2004}
+}
 @article{Ignjatovic2009,
-author = {Ignjatovic, A.},
+author = {Ignjatovic, Aleksandar},
 doi = {10.1109/TSP.2009.2020749},
 file = {:Users/tiao/Documents/Mendeley Desktop/Ignjatovic/2009/Ignjatovic\_2009\_Chromatic Derivatives and Local Approximations.pdf:pdf},
 issn = {1053-587X},
@@ -11,4 +67,18 @@ title = {{Chromatic Derivatives and Local Approximations}},
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=4813249},
 volume = {57},
 year = {2009}
+}
+@article{Telea2004,
+author = {Telea, Alexandru},
+doi = {10.1080/10867651.2004.10487596},
+file = {:Users/tiao/Documents/Mendeley Desktop/Telea/2004/Telea\_2004\_An Image Inpainting Technique Based on the Fast Marching Method.pdf:pdf},
+issn = {1086-7651},
+journal = {Journal of Graphics Tools},
+month = jan,
+number = {1},
+pages = {23--34},
+title = {{An Image Inpainting Technique Based on the Fast Marching Method}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/10867651.2004.10487596},
+volume = {9},
+year = {2004}
 }
